[gd_scene load_steps=6 format=3 uid="uid://d31qsi5m1v5pg"]

[ext_resource type="Script" path="res://scenes/Gui/play_area.gd" id="1_hskyp"]
[ext_resource type="PackedScene" uid="uid://dv0wrepsp100q" path="res://scenes/Board/board.tscn" id="2_560al"]

[sub_resource type="LabelSettings" id="LabelSettings_xgd6b"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_d4yan"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_b1gra"]
font_size = 18

[node name="PlayArea" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hskyp")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.242188, 0.242188, 0.242188, 1)

[node name="MainGame" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MineCounter" type="Label" parent="MainGame"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 48.0
offset_right = 224.0
offset_bottom = 82.0
text = "Mines: 999999"
label_settings = SubResource("LabelSettings_xgd6b")

[node name="TimeElapsed" type="Label" parent="MainGame"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 96.0
offset_right = 224.0
offset_bottom = 130.0
text = "Time: 00:00"
label_settings = SubResource("LabelSettings_xgd6b")

[node name="Board" parent="MainGame" instance=ExtResource("2_560al")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Resign" type="Button" parent="MainGame"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 49.0
offset_top = 704.0
offset_right = 209.0
offset_bottom = 752.0
focus_mode = 1
theme_override_font_sizes/font_size = 18
text = "Resign"

[node name="MenuOptions" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Easy" type="Button" parent="MenuOptions"]
layout_mode = 0
offset_left = 48.0
offset_top = 544.0
offset_right = 208.0
offset_bottom = 592.0
focus_mode = 1
theme_override_font_sizes/font_size = 18
text = "Easy"

[node name="Normal" type="Button" parent="MenuOptions"]
layout_mode = 0
offset_left = 48.0
offset_top = 624.0
offset_right = 208.0
offset_bottom = 672.0
focus_mode = 1
theme_override_font_sizes/font_size = 18
text = "Normal"

[node name="Hard" type="Button" parent="MenuOptions"]
layout_mode = 0
offset_left = 48.0
offset_top = 704.0
offset_right = 208.0
offset_bottom = 752.0
focus_mode = 1
theme_override_font_sizes/font_size = 18
text = "Hard"

[node name="Message" type="Label" parent="MenuOptions"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 192.0
offset_right = 254.0
offset_bottom = 533.0
text = "MESSAGE"
label_settings = SubResource("LabelSettings_d4yan")
autowrap_mode = 3

[node name="RowCounter" type="Label" parent="MenuOptions"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1072.0
offset_top = 448.0
offset_right = 1248.0
offset_bottom = 482.0
text = "Rows: 999"
label_settings = SubResource("LabelSettings_b1gra")

[node name="RowSlider" type="HSlider" parent="MenuOptions"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1072.0
offset_top = 480.0
offset_right = 1248.0
offset_bottom = 496.0
theme_override_constants/center_grabber = -1
min_value = 4.0
max_value = 24.0
value = 4.0
scrollable = false

[node name="ColumnCounter" type="Label" parent="MenuOptions"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1072.0
offset_top = 528.0
offset_right = 1248.0
offset_bottom = 562.0
text = "Columns: 999"
label_settings = SubResource("LabelSettings_b1gra")

[node name="ColumnSlider" type="HSlider" parent="MenuOptions"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1072.0
offset_top = 560.0
offset_right = 1248.0
offset_bottom = 576.0
theme_override_constants/center_grabber = -1
min_value = 4.0
max_value = 24.0
value = 4.0
scrollable = false

[node name="MaxMineCounter" type="Label" parent="MenuOptions"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1072.0
offset_top = 608.0
offset_right = 1248.0
offset_bottom = 642.0
text = "Mines: 999"
label_settings = SubResource("LabelSettings_b1gra")

[node name="MineSlider" type="HSlider" parent="MenuOptions"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1072.0
offset_top = 640.0
offset_right = 1248.0
offset_bottom = 656.0
theme_override_constants/center_grabber = -1
min_value = 5.0
value = 5.0
scrollable = false

[node name="StartGame" type="Button" parent="MenuOptions"]
layout_mode = 0
offset_left = 1072.0
offset_top = 704.0
offset_right = 1248.0
offset_bottom = 768.0
focus_mode = 1
theme_override_font_sizes/font_size = 18
text = "Start Game"

[connection signal="pressed" from="MainGame/Resign" to="." method="_on_resign_pressed"]
[connection signal="pressed" from="MenuOptions/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="MenuOptions/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="MenuOptions/Hard" to="." method="_on_hard_pressed"]
[connection signal="value_changed" from="MenuOptions/RowSlider" to="." method="_on_row_slider_value_changed"]
[connection signal="value_changed" from="MenuOptions/ColumnSlider" to="." method="_on_column_slider_value_changed"]
[connection signal="value_changed" from="MenuOptions/MineSlider" to="." method="_on_mine_slider_value_changed"]
[connection signal="pressed" from="MenuOptions/StartGame" to="." method="_on_start_game_pressed"]
